Fix text align

--- a/styles.css
+++ b/styles.css
@@ -93,10 +93,7 @@ gap: 31px;
   font-family: "Ivy Mode";
   font-weight: 600;
   font-size: 50px;
-  padding: 0 120px;
-  /* position: absolute;
-  left: 530px;
-  top: -100px; */
+  padding-left: 650px;
 }
 .details {
   display: flex;
@@ -149,7 +146,7 @@ gap: 25px;
   padding: 0 120px;
 }
 
-/* @media only screen and (max-width: 1700px) and (min-width: 10px) {
+@media only screen and (max-width: 1700px) and (min-width: 10px) {
   .logo {
     display: none;
   }
@@ -164,6 +161,9 @@ gap: 25px;
   .form-labels {
     text-align: center;
   }
+  .form-row input {
+    text-align: center;
+  }
 }
 
 @media only screen and (max-width: 1001px) and (min-width: 100px) {
@@ -174,6 +174,12 @@ gap: 25px;
   }
   .col-1, .col-2 {
     width: 100%;
+    background-image: none;
+    margin-top: -10em;
+    position: relative;
+  }
+  .main-phrase {
+    display: none;
   }
   .desciption {
     display: none;
@@ -183,4 +189,4 @@ gap: 25px;
     width: 100%;
     margin: 0 auto;
   }
-} */
+}
